--- a/ethereum_addr_scan.ipynb
+++ b/ethereum_addr_scan.ipynb
@@ -2,7 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
+   "id": "5d4ed0da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas version:  1.2.4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-54-0f00b66d52cb>:10: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "  pd.set_option('display.max_colwidth', -1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "print(\"pandas version: \", pd.__version__)\n",
+    "#pd.set_option('display.max_row', 1000000)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "#pd.set_option('display.max_columns', 1000)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.width', 1000000)\n",
+    "pd.set_option('display.max_seq_items', None)\n",
+    "#pd.set_option('display.height', 1000)\n",
+    "pd.set_option('display.max_colwidth', -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "5571b937",
    "metadata": {},
    "outputs": [
@@ -10,26 +45,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "write full path : H:\\mem_dump\\memdump_210512.mem\n",
-      "H:\\mem_dump\\memdump_210512.mem\n"
-     ]
-    },
-    {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-f5c756f39a4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfileno\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccess\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mACCESS_READ\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmm\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mmatch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfinditer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m         \u001b[1;31m#if not (match.end() == len(mm) and len(match.group()) < max_length and length == chunk_size):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: "
+      "write full path : H:\\mem_dump\\memdump_A_210512.mem\n",
+      "H:\\mem_dump\\memdump_A_210512.mem\n",
+      "<class 'mmap.mmap'>\n"
      ]
     }
    ],
    "source": [
     "import struct, re, os, sys\n",
     "from mmap import ACCESS_READ, mmap\n",
-    "\n",
+    "import pandas as pd\n",
+    "from pandas import Series, DataFrame\n",
+    "import numpy as np\n",
+    "from tempfile import mkdtemp\n",
+    "import json\n",
     "\n",
     "path = input(\"write full path : \")\n",
     "\n",
@@ -41,32 +70,28 @@
     "\n",
     "print(path)\n",
     "\n",
-    "chunk_size = 2**32\n",
-    "matches = []\n",
-    "#pattern_group = [b,'^0x[a-fA-F0-9]{40}$']\n",
-    "p = re.compile(b'^0x[a-fA-F0-9]{40}$')\n",
-    "max_length = 42\n",
-    "#p1 = re.compile(b'0x9Ae08d0118E105Dce648A7fBA6fc12b2c3e9c288')\n",
-    "#m = p.match('0x9Ae08d0118E105Dce648A7fBA6fc12b2c3e9c288')\n",
-    "#m = p.search(data)\n",
-    "#print(m) # 내용없음\n",
-    "#m = re.finditer(p, data)\n",
-    "#print(m)\n",
+    "p = re.compile(rb'^0x[a-fA-F0-9]{40}$', re.DOTALL | re.IGNORECASE | re.MULTILINE)\n",
     "\n",
     "with open(path, 'rb') as f, mmap(f.fileno(), 0, access=ACCESS_READ) as mm:\n",
-    "    print(mm[0:])\n",
+    "    #print(mm[0:1000])\n",
+    "    #print(mm[::2])\n",
+    "    b=type(mm)\n",
+    "    print(b)\n",
     "    for match in p.finditer(mm):\n",
-    "        #if not (match.end() == len(mm) and len(match.group()) < max_length and length == chunk_size):\n",
-    "        #    matches.append(match.group())\n",
-    "    #mm.close()\n",
+    "        s = match.start()\n",
+    "        e = match.end()\n",
+    "        grep_match_found = mm[s:e].decode(\"utf-8\")\n",
+    "        print(str(grep_match_found))\n",
+    "        \n",
     "#f.close()\n",
-    "        #print(\"------result------\")\n",
-    "        print(match)\n",
-    "        #print(match.decode(\"utf-8\"))\n",
-    "\n",
-    "#if m:\n",
-    "#    print(\"found a match: \", m.group(1))\n",
-    "#    print(\"match offset: \", m.start())\n"
+    "#mm.close()\n",
+    "    \n",
+    "# H:\\mem_dump\\memdump_C_210504.mem\n",
+    "# H:\\mem_dump\\memdump_A_210512.mem\n",
+    "# /mnt/h/mem_dump/memdump_C_210504.mem\n",
+    "# /mnt/h/mem_dump/memdump_A_210512.mem\n",
+    "0x9ae08d0118e105dce648a7fba6fc12b2c3e9c288\n",
+    "0x9Ae08d0118E105Dce648A7fBA6fc12b2c3e9c288"
    ]
   },
   {
