--- a/ethereum_addr_scan.ipynb
+++ b/ethereum_addr_scan.ipynb
@@ -70,7 +70,9 @@
     "\n",
     "print(path)\n",
     "\n",
-    "p = re.compile(rb'^0x[a-fA-F0-9]{40}$', re.DOTALL | re.IGNORECASE | re.MULTILINE)\n",
+    "#p = re.compile(rb'^0x[a-fA-F0-9]{40}$', re.DOTALL | re.IGNORECASE | re.MULTILINE)\n",
+    "p = re.compile(rb'0x[a-fA-F0-9]{40}$', re.DOTALL | re.IGNORECASE | re.MULTILINE)\n",
+    "# 정규표현식에 시작문자^를 제거하여 줄 시작 구분없이 텍스트에 매치되는 문자만 검색하도록 하였다\n",
     "\n",
     "with open(path, 'rb') as f, mmap(f.fileno(), 0, access=ACCESS_READ) as mm:\n",
     "    #print(mm[0:1000])\n",
@@ -90,8 +92,7 @@
     "# H:\\mem_dump\\memdump_A_210512.mem\n",
     "# /mnt/h/mem_dump/memdump_C_210504.mem\n",
     "# /mnt/h/mem_dump/memdump_A_210512.mem\n",
-    "0x9ae08d0118e105dce648a7fba6fc12b2c3e9c288\n",
-    "0x9Ae08d0118E105Dce648A7fBA6fc12b2c3e9c288"
+    "#0x9ae08d0118e105dce648a7fba6fc12b2c3e9c288\n"
    ]
   },
   {
